k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dormwatch-backend-v1
  namespace: dormwatch-backend-v1
spec:
  type: ClusterIP
  selector:
    app: dormwatch-backend-v1
  ports:
    - name: http
      port: 8000
      targetPort: http
