k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dormwatch-backend-v1
  namespace: dormwatch-backend-v1
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: dormwatch-v1.thesis-i.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dormwatch-backend-v1
                port:
                  number: 8000
